--- a/MainPage/Mainpage.html
+++ b/MainPage/Mainpage.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="background-color-overlay"></div>
     <div id="background-container"><div class="background"></div></div>
 
     <!--- Page land lead header --->
@@ -21,7 +22,7 @@
         <div class="lead-header-spacing">
         </div>
         <div class="lead-header-body">
-            <a href=""> 
+            <a href="../StorePage/Store.html"> 
                 <div class="lead-header-body-buttons">Art Store<br></div>
             </a>
             <a href="../RequestServicePage/RequestService.html">
