--- a/RequestServicePage/RequestService.html
+++ b/RequestServicePage/RequestService.html
@@ -40,9 +40,10 @@
                         <p><input type="text"></p>
                         <p><input type="text"></p>
                         <p><input type="date"></p>
-                        <textarea placeholder="Please describe the job as thoroughly as possible." cols="30" rows="10"></textarea>
+                        <textarea placeholder="Please describe the job as thoroughly as possible."></textarea>
                     </div>
                 </div>
+                <button id="sendbutton"><a href="">Send Request</a></button>
             </div>
         </div>
     </div>
