--- a/RequestServicePage/RequestService.html
+++ b/RequestServicePage/RequestService.html
@@ -12,7 +12,7 @@
     <!-- Head -->
         <div class="main-header-flex-container">
             <div>
-                <a href="../MainPage/Mainpage.html"><img class="Header-Logo" src="../DemoLogo.jpg"></a>
+                <a href="../MainPage/Mainpage.html"><img class="Header-Logo" src="../Content Repository/DemoLogo.jpg"></a>
             </div>
         </div> 
 
