Added The animation and the redirect of the logo load page

--- a/WebsiteLoadingPage/LoadingPage.html
+++ b/WebsiteLoadingPage/LoadingPage.html
@@ -15,5 +15,6 @@
             <img src="../Content Repository/DemoLogo.jpg">
         </div>
     </div>
+    <script src="./LoadingPage.js"></script>
 </body>
 </html>
