added a buch of stuff

--- a/StorePage/Store.html
+++ b/StorePage/Store.html
@@ -56,16 +56,16 @@
     <!-- Category cards -->
     <div class="card-container">
         <div id="city-card" class="card">
-            City
+            <a href="../CategoryPages/City/CityCategoryPage.html">City</a>
         </div>
         <div id="cars-card" class="card">
-            Cars
+          <a href="../CategoryPages/Cars/CarsCategoryPage.html">Cars</a>
         </div>
         <div id="nature-card" class="card">
-            Nature
+            <a href="../CategoryPages/Nature/NatureCategoryPage.html">Nature</a>
         </div>
         <div id="people-card" class="card">
-            People
+            <a href="../CategoryPages/People/PeopleCategoryPage.html"> People</a>
         </div>
     </div>
     <script src="Store.js"></script>
