--- a/RequestServicePage/RequestService.html
+++ b/RequestServicePage/RequestService.html
@@ -47,6 +47,6 @@
             </div>
         </div>
     </div>
-    <script src="RequestPage.js"></script>
+    <script src="RequestServicePage.js"></script>
 </body>
 </html>
