Minor html5 fix

--- a/RequestServicePage/RequestService.html
+++ b/RequestServicePage/RequestService.html
@@ -43,7 +43,7 @@
                         <textarea placeholder="Please describe the job as thoroughly as possible."></textarea>
                     </div>
                 </div>
-                <button id="sendbutton"><a href="">Send Request</a></button>
+                <button id="sendbutton">Send Request</button>
             </div>
         </div>
     </div>
