html5 and css3 reqs

--- a/CategoryPages/Nature/NatureCategoryPage.html
+++ b/CategoryPages/Nature/NatureCategoryPage.html
@@ -19,7 +19,7 @@
         </div>
         <!-- Logo -->
         <div>
-            <a href="../../MainPage/Mainpage.html"><img class="Header-Logo" src="../../Content Repository/DemoLogo.jpg"></a>
+            <a href="../../MainPage/Mainpage.html"><img alt="" class="Header-Logo" src="../../ContentRepository/DemoLogo.jpg"></a>
         </div>
         <!-- Right Section -->
         <div class="header-search">
@@ -31,28 +31,28 @@
     <!-- Category cards -->
     <div class="card-container">
         <div class="card">
-            <img alt="" src="../../Content Repository/Nature/IMG_7170.jpg">
+            <img alt="" src="../../ContentRepository/Nature/IMG_7170.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Nature/IMG_8003.jpg">
+            <img alt="" src="../../ContentRepository/Nature/IMG_8003.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Nature/IMG_7964.jpg">
+            <img alt="" src="../../ContentRepository/Nature/IMG_7964.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Nature/IMG_7995.jpg">
+            <img alt="" src="../../ContentRepository/Nature/IMG_7995.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Nature/IMG_7996.jpg">
+            <img alt="" src="../../ContentRepository/Nature/IMG_7996.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Nature/IMG_8000.jpg">
+            <img alt="" src="../../ContentRepository/Nature/IMG_8000.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Nature/IMG_8001.jpg">
+            <img alt="" src="../../ContentRepository/Nature/IMG_8001.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Nature/IMG_8002.jpg">
+            <img alt="" src="../../ContentRepository/Nature/IMG_8002.jpg">
         </div>
 
     </div>
