--- a/CategoryPages/People/PeopleCategoryPage.html
+++ b/CategoryPages/People/PeopleCategoryPage.html
@@ -19,40 +19,40 @@
         </div>
         <!-- Logo -->
         <div>
-            <a href="../../MainPage/Mainpage.html"><img class="Header-Logo" src="../../Content Repository/DemoLogo.jpg"></a>
+            <a href="../../MainPage/Mainpage.html"><img alt="" class="Header-Logo" src="../../ContentRepository/DemoLogo.jpg"></a>
         </div>
         <!-- Right Section -->
         <div class="header-search">
         </div>
     </div>
 
-    <!-- Compensation for the position: absolute; items (webpage flow ajustment) -->
+    <!-- Compensation for the position: absolute; items (webpage flow ajustment -->
     <div id="webpage-flow-adjust"></div>
     <!-- Category cards -->
     <div class="card-container">
         <div class="card">
-            <img alt="" src="../../Content Repository/People/IMG_7998.jpg">
+            <img alt="" src="../../ContentRepository/People/IMG_7998.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/People/IMG_7999.jpg">
+            <img alt="" src="../../ContentRepository/People/IMG_7999.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/People/IMG_8935.jpg">
+            <img alt="" src="../../ContentRepository/People/IMG_8935.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/People/IMG_8936.jpg">
+            <img alt="" src="../../ContentRepository/People/IMG_8936.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/People/IMG_8947.jpg">
+            <img alt="" src="../../ContentRepository/People/IMG_8947.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/People/IMG_8956.jpg">
+            <img alt="" src="../../ContentRepository/People/IMG_8956.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/People/IMG_8960.jpg">
+            <img alt="" src="../../ContentRepository/People/IMG_8960.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/People/IMG_8982.jpg">
+            <img alt="" src="../../ContentRepository/People/IMG_8982.jpg">
         </div>
 
     </div>
