--- a/StorePage/Store.html
+++ b/StorePage/Store.html
@@ -41,7 +41,7 @@
         </div>
         <!-- Logo -->
         <div>
-            <a href="../MainPage/Mainpage.html"><img alt="" class="Header-Logo" src="../Content Repository/DemoLogo.jpg"></a>
+            <a href="../MainPage/Mainpage.html"><img alt="" class="Header-Logo" src="../ContentRepository/DemoLogo.jpg"></a>
         </div>
         <!-- Right Section -->
         <div class="header-search">
