--- a/WebsiteLoadingPage/LoadingPage.html
+++ b/WebsiteLoadingPage/LoadingPage.html
@@ -12,7 +12,7 @@
         <div id="gradient">
         </div>
         <div id="logo">
-            <img alt="" src="../Content Repository/DemoLogo.jpg">
+            <img alt="" src="../ContentRepository/DemoLogo.jpg">
         </div>
     </div>
     <script src="./LoadingPage.js"></script>
