--- a/CategoryPages/Cars/CarsCategoryPage.html
+++ b/CategoryPages/Cars/CarsCategoryPage.html
@@ -19,7 +19,7 @@
         </div>
         <!-- Logo -->
         <div>
-            <a href="../../MainPage/Mainpage.html"><img class="Header-Logo" src="../../Content Repository/DemoLogo.jpg"></a>
+            <a href="../../MainPage/Mainpage.html"><img alt="" class="Header-Logo" src="../../ContentRepository/DemoLogo.jpg"></a>
         </div>
         <!-- Right Section -->
         <div class="header-search">
@@ -31,28 +31,28 @@
     <!-- Category cards -->
     <div class="card-container">
         <div class="card">
-            <img alt="" src="../../Content Repository/Cars/IMG_9624.jpg">
+            <img alt="" src="../../ContentRepository/Cars/IMG_9624.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Cars/IMG_9626.jpg">
+            <img alt="" src="../../ContentRepository/Cars/IMG_9626.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Cars/IMG_9637.jpg">
+            <img alt="" src="../../ContentRepository/Cars/IMG_9637.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Cars/IMG_9638.jpg">
+            <img alt="" src="../../ContentRepository/Cars/IMG_9638.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Cars/IMG_9639.jpg">
+            <img alt="" src="../../ContentRepository/Cars/IMG_9639.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Cars/IMG_9640.jpg">
+            <img alt="" src="../../ContentRepository/Cars/IMG_9640.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Cars/IMG_9641.jpg">
+            <img alt="" src="../../ContentRepository/Cars/IMG_9641.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/Cars/IMG_9642.jpg">
+            <img alt="" src="../../ContentRepository/Cars/IMG_9642.jpg">
         </div>
 
     </div>
