--- a/CategoryPages/City/CityCategoryPage.html
+++ b/CategoryPages/City/CityCategoryPage.html
@@ -19,7 +19,7 @@
         </div>
         <!-- Logo -->
         <div>
-            <a href="../../MainPage/Mainpage.html"><img class="Header-Logo" src="../../Content Repository/DemoLogo.jpg"></a>
+            <a href="../../MainPage/Mainpage.html"><img alt="" class="Header-Logo" src="../../ContentRepository/DemoLogo.jpg"></a>
         </div>
         <!-- Right Section -->
         <div class="header-search">
@@ -31,28 +31,28 @@
     <!-- Category cards -->
     <div class="card-container">
         <div class="card">
-            <img alt="" src="../../Content Repository/City/IMG_9563.jpg">
+            <img alt="" src="../../ContentRepository/City/IMG_9563.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/City/IMG_9646.jpg">
+            <img alt="" src="../../ContentRepository/City/IMG_9646.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/City/IMG_9658.jpg">
+            <img alt="" src="../../ContentRepository/City/IMG_9658.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/City/IMG_9660.jpg">
+            <img alt="" src="../../ContentRepository/City/IMG_9660.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/City/IMG_9661.jpg">
+            <img alt="" src="../../ContentRepository/City/IMG_9661.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/City/IMG_9662.jpg">
+            <img alt="" src="../../ContentRepository/City/IMG_9662.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/City/IMG_9649.jpg">
+            <img alt="" src="../../ContentRepository/City/IMG_9649.jpg">
         </div>
         <div class="card">
-            <img alt="" src="../../Content Repository/City/IMG_9647.jpg">
+            <img alt="" src="../../ContentRepository/City/IMG_9647.jpg">
         </div>
 
     </div>
